# build_llm_from_scratch

./: .gitignore  Cargo.toml  README.md  log4rs.yml  requirements.txt
.cargo/: config.toml
python/: dataset.py  get_the_verdict.py  split.py  tokeniser.py
src/: tokeniser.rs
