[package]
name = "build-llm-from-scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4"
log4rs = "1.0"
ndarray = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.22.0"
thiserror = "1.0"
tiktoken-rs = "0.7.0"
tokio = { version = "1", features = ["full"] }
